--- a/art_node_api/package.json
+++ b/art_node_api/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
+    "styled-components": "^3.1.6",
     "superagent": "^3.8.2"
   },
   "scripts": {
