--- a/art_node_api/package.json
+++ b/art_node_api/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-scripts": "1.1.0",
     "request": "^2.83.0",
     "styled-components": "^3.1.6",
